--- a/project/res/values-in/strings.xml
+++ b/project/res/values-in/strings.xml
@@ -1771,6 +1771,10 @@
     <string name="disclaimer_expedia_points">Jika Anda memiliki akun Expedia Rewards, lakukan pemesanan dengan alamat email yang sama dan poin akan dikirim secara otomatis setelah masa menginap Anda. Kemungkinan perlu waktu hingga 30 hari untuk dapat melihat poin Anda.</string>
     <!-- Button label for confirming your booking -->
     <string name="confirm_book">Konfirmasikan &amp; Pesan</string>
+    <!-- Label for advertising optout setting -->
+    <string name="tracking_optout">Batasi Pemantauan Iklan</string>
+    <!-- Description for advertising optout setting -->
+    <string name="tracking_optout_description">Nonaktifkan pemantauan iklan pihak ketiga. Aplikasi harus diaktifkan ulang.</string>
     <!-- Label for clearing private data -->
     <string name="clear_private_data">Hapus Data Pribadi</string>
     <!-- Title for dialog confirming the clearing of private data -->
@@ -2706,7 +2710,7 @@
     <!-- Description for FT Free app -->
     <string name="VSC_Voyages_SNF_description">Aplikasi Voyages-sncf.com</string>
     <!-- VSC Copyright information -->
-    <string name="VSC_copyright">© Copyright 2012-2014 Agence Voyages-SNCF, Inc.\nHak cipta dilindungi undang-undang.</string>
+    <string name="VSC_copyright">© Hak cipta 2012-2014 Agence Voyages-SNCF, Inc.\nHak cipta dilindungi undang-undang.</string>
     <!-- VSC app name -->
     <string name="VSC_app_name">VSC Hotels</string>
     <!-- Link to open when VSC logo is clicked on -->
