--- a/project/res/values-zh-rTW/strings.xml
+++ b/project/res/values-zh-rTW/strings.xml
@@ -9,7 +9,7 @@
     <!-- Log in with facebook (button text) -->
     <string name="Log_in_with_Facebook">使用 Facebook 帳號登入</string>
     <!-- fetching information from Facebook -->
-    <string name="fetching_facebook_info">正在擷取 Facebook 的資訊…</string>
+    <string name="fetching_facebook_info">正在取得 Facebook 的資訊…</string>
     <!-- Attempting to log you in with facebook credentials -->
     <string name="attempting_to_log_in_with_facebook">正在嘗試以 Facebook 的資料登入…</string>
     <!-- We have encountered an error -->
@@ -61,17 +61,17 @@
     <!-- Error message when we can't connect -->
     <string name="error_launch_connection">很抱歉，我們無法建立連線。</string>
     <!-- Menu option for going to see your trips/itineraries -->
-    <string name="trips">旅行</string>
+    <string name="trips">行程</string>
     <!-- Google play services unrecoverable error dialog message -->
-    <string name="google_play_services_unrecoverable_error">此 App 需要 Google Play Services。請安裝最新版的 Google Play Services。</string>
+    <string name="google_play_services_unrecoverable_error">此 App 需要 Google Play 服務。請安裝最新版的 Google Play 服務。</string>
 
     <!-- Notifications -->
     <!-- Title for flight Check In Local Notification -->
     <string name="Check_in_available">可辦理登機</string>
     <!-- Content for flight Check In Local Notification -->
-    <string name="x_flight_to_x_TEMPLATE">%1$s航班前往%2$s</string>
+    <string name="x_flight_to_x_TEMPLATE">%1$s班機前往%2$s</string>
     <!-- Shortened push notification title. %1$s = city name. E.g. "Your flight to Minneapolis" -->
-    <string name="your_flight_to_x_TEMPLATE">您的航班前往%1$s</string>
+    <string name="your_flight_to_x_TEMPLATE">您的班機前往%1$s</string>
     <!-- Notification title for hotel check-out notification -->
     <string name="Check_out_today">今天需要退房</string>
     <!-- Notification title for car pick up -->
@@ -91,7 +91,7 @@
     <!-- Itinerary -->
     <string name="itinerary">行程</string>
     <!-- Shop -->
-    <string name="shop">購物</string>
+    <string name="shop">預訂</string>
     <!-- Find Itinerary -->
     <string name="find_itinerary">搜尋行程</string>
     <!-- Find Itinerary # -->
@@ -101,11 +101,11 @@
     <!-- Elite plus customer support -->
     <string name="elite_plus_customer_support">Elite Plus 客戶支援</string>
     <!-- No upcoming trips -->
-    <string name="no_upcoming_trips">沒有即將出發的旅行</string>
+    <string name="no_upcoming_trips">沒有即將出發的行程</string>
     <!-- Enter itinerary number -->
     <string name="enter_itinerary_number">輸入行程編號</string>
     <!-- Fetching your itinerary -->
-    <string name="fetching_your_itinerary">正在擷取行程…</string>
+    <string name="fetching_your_itinerary">正在取得行程…</string>
     <!-- Error fetching itinerary -->
     <string name="itinerary_fetch_error">擷取行程時發生錯誤</string>
     <!-- Log in for your trips -->
@@ -391,7 +391,7 @@
     <!-- Car category: mini -->
     <string name="car_category_mini">迷你車</string>
     <!-- Car category: economy -->
-    <string name="car_category_economy">經濟車</string>
+    <string name="car_category_economy">國民車</string>
     <!-- Car category: compact -->
     <string name="car_category_compact">小型車</string>
     <!-- Car category: midize -->
@@ -426,9 +426,9 @@
     <string name="car_category_oversize">超大型車</string>
 
     <!-- Car types -->
-    <string name="car_type_two_door">雙門 汽車</string>
-    <string name="car_type_three_door">三門 汽車</string>
-    <string name="car_type_four_door">四門 汽車</string>
+    <string name="car_type_two_door">雙門汽車</string>
+    <string name="car_type_three_door">三門汽車</string>
+    <string name="car_type_four_door">四門汽車</string>
     <string name="car_type_van">箱型車</string>
     <string name="car_type_wagon">轎車</string>
     <string name="car_type_limousine">豪華禮車</string>
@@ -630,11 +630,11 @@
 
     <!-- Flights -->
     <!-- Label for Flight Search in task manager -->
-    <string name="Expedia_Flights">Expedia 航班</string>
+    <string name="Expedia_Flights">Expedia 機票</string>
     <!-- Label for Flight Confirmation activity in task manager -->
     <string name="Flights_Confirmation">航班確認</string>
     <!-- Label for flight search part of app -->
-    <string name="search_flights">搜尋航班</string>
+    <string name="search_flights">搜尋班機</string>
     <!-- Hint in edit text that indicates one should enter a departure airport -->
     <string name="hint_departure_airport">出發機場</string>
     <!-- Hint in edit text that indicates one should enter an arrival airport -->
@@ -724,7 +724,7 @@
     <!-- Message shown when we could not load the AirAsia flight routes -->
     <string name="error_could_not_load_air_asia">無法載入 AirAsia 航線</string>
     <!-- Header row for airports that were used recently for a search -->
-    <string name="recent">最近</string>
+    <string name="recent">最近搜尋</string>
     <!-- Display for selected airport dropdown.  %1$s is the airport code, %2$s is the city, e.g. "(MSP) Minneapolis" -->
     <string name="dropdown_airport_selection">&lt;b&gt;%1$s&lt;/b&gt; %2$s</string>
     <!-- Prompt for spinner dialog when selecting departure airport -->
@@ -1477,7 +1477,7 @@
     <!-- Suggestion to search the user's current location (instead of entering a specific place) -->
     <string name="current_location">目前地點</string>
     <!-- Suggestion to search the currently visible map area on the screen -->
-    <string name="visible_map_area">可見的地圖區域</string>
+    <string name="visible_map_area">所看到的地圖區域</string>
 
     <!-- Search list adapter -->
     <!-- The label for how much hotels cost - "from $120/night", for example -->
@@ -1510,7 +1510,7 @@
     <!-- Default Loading message for widget -->
     <string name="loading_hotels">正在載入飯店…</string>
     <!-- Template for sale element in widget. The parameter is for the sale % -->
-    <string name="widget_savings_template">節省 %2.0f%%</string>
+    <string name="widget_savings_template">可省 %2.0f%%</string>
     <!-- Indicator to user to tap the widget to cause it to refresh -->
     <string name="refresh_widget">點選以重新整理</string>
     <!-- Error string for widget when internet connection is unavailable -->
@@ -1771,6 +1771,10 @@
     <string name="disclaimer_expedia_points">如果您有 Expedia Rewards 帳戶，請使用相同的電子郵件地址訂房，積分會在您入住之後自動記錄。請注意，積分可能需要 30 天後才會顯示。</string>
     <!-- Button label for confirming your booking -->
     <string name="confirm_book">確認並預訂</string>
+    <!-- Label for advertising optout setting -->
+    <string name="tracking_optout">限制廣告追蹤</string>
+    <!-- Description for advertising optout setting -->
+    <string name="tracking_optout_description">停用第三方廣告追蹤。必須重新啟動 App。</string>
     <!-- Label for clearing private data -->
     <string name="clear_private_data">清除個人資料</string>
     <!-- Title for dialog confirming the clearing of private data -->
@@ -1938,7 +1942,7 @@
 
     <!-- Coupon Error Strings -->
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
-    <string name="coupon_error_no_code">很抱歉，無法套用此優惠券。</string>
+    <string name="coupon_error_no_code">很抱歉，無法套用此優惠代碼。</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">很抱歉，這不是有效的優惠代碼。</string>
     <!-- Error when applying coupon - the coupon has expired -->
@@ -2010,7 +2014,7 @@
     <!-- Extra description for "app feedback" button, when space allows -->
     <string name="app_feedback_description">針對此 App 提供您寶貴的意見。</string>
     <!-- Label for "app support" button in info page -->
-    <string name="app_support">應用程式支援</string>
+    <string name="app_support">App 技術支援</string>
     <!-- Extra description for "app support" button, when space allows -->
     <string name="app_support_description">請留言，我們會儘快回覆。</string>
     <!-- Extra description for "tell a friend" button, when space allows -->
@@ -2030,11 +2034,11 @@
     <!-- Dialog Title telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_title_logged_out_and_cleared_private_data">登出並已清除資料</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
-    <string name="dialog_message_logged_out_and_cleared_private_data">您已經登出 Expedia 帳戶，同時所有已儲存的帳單和聯絡資訊皆已清除。</string>
+    <string name="dialog_message_logged_out_and_cleared_private_data">您已經登出 Expedia 帳戶，同時所有儲存的帳單和聯絡資訊皆已清除。</string>
     <!-- Dialog Title telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_title_cleared_private_data">已清除個人資料</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
-    <string name="dialog_message_cleared_private_data">所有已儲存的帳單和聯絡資訊皆已清除。</string>
+    <string name="dialog_message_cleared_private_data">所有儲存的帳單和聯絡資訊皆已清除。</string>
     <!-- Dialog Message asking the user to confirm that they want to open the expedia mobile site in an external browser -->
     <string name="dialog_message_launch_expedia_mobile_site">開啟 Expedia 行動版網站？</string>
     <!-- Action button label to Subscribe to our mailing list -->
@@ -2230,15 +2234,15 @@
     <string name="country_bj">貝南</string>
     <string name="country_bm">百慕達</string>
     <string name="country_bt">不丹</string>
-    <string name="country_bo">玻利維亞多民族國</string>
-    <string name="country_ba">波士尼亞及赫塞哥維納</string>
+    <string name="country_bo">玻利維亞</string>
+    <string name="country_ba">波士尼亞赫塞哥維納</string>
     <string name="country_bw">波札那</string>
     <string name="country_br">巴西</string>
     <string name="country_io">英屬印度洋領地</string>
     <string name="country_bn">汶萊</string>
     <string name="country_bg">保加利亞</string>
     <string name="country_bf">布吉納法索</string>
-    <string name="country_bi">蒲隆地共和國</string>
+    <string name="country_bi">蒲隆地</string>
     <string name="country_kh">柬埔寨</string>
     <string name="country_cm">喀麥隆</string>
     <string name="country_ca">加拿大</string>
@@ -2249,7 +2253,7 @@
     <string name="country_cl">智利</string>
     <string name="country_cn">中國</string>
     <string name="country_cx">聖誕島</string>
-    <string name="country_cc">可可斯 (基林) 群島</string>
+    <string name="country_cc">可可斯群島</string>
     <string name="country_co">哥倫比亞</string>
     <string name="country_km">葛摩</string>
     <string name="country_cg">剛果</string>
@@ -2258,12 +2262,12 @@
     <string name="country_cr">哥斯大黎加</string>
     <string name="country_hr">克羅埃西亞</string>
     <string name="country_cu">古巴</string>
-    <string name="country_cy">塞普勒斯</string>
+    <string name="country_cy">賽普勒斯</string>
     <string name="country_cz">捷克共和國</string>
     <string name="country_ci">象牙海岸</string>
     <string name="country_dk">丹麥</string>
     <string name="country_dj">吉布地</string>
-    <string name="country_dm">多明尼加</string>
+    <string name="country_dm">多米尼克</string>
     <string name="country_do">多明尼加共和國</string>
     <string name="country_ec">厄瓜多</string>
     <string name="country_eg">埃及</string>
@@ -2272,7 +2276,7 @@
     <string name="country_er">厄利垂亞</string>
     <string name="country_ee">愛沙尼亞</string>
     <string name="country_et">衣索比亞</string>
-    <string name="country_fk">福克蘭群島 (馬爾維納斯群島)</string>
+    <string name="country_fk">福克蘭群島 (瑪爾維納斯)</string>
     <string name="country_fo">法羅群島</string>
     <string name="country_fj">斐濟</string>
     <string name="country_fi">芬蘭</string>
@@ -2288,10 +2292,10 @@
     <string name="country_gr">希臘</string>
     <string name="country_gl">格陵蘭</string>
     <string name="country_gd">格瑞那達</string>
-    <string name="country_gp">瓜德羅普</string>
+    <string name="country_gp">哥德普洛</string>
     <string name="country_gu">關島</string>
     <string name="country_gt">瓜地馬拉</string>
-    <string name="country_gg">根息島</string>
+    <string name="country_gg">根息</string>
     <string name="country_gn">幾內亞</string>
     <string name="country_gw">幾內亞比索</string>
     <string name="country_gy">蓋亞那</string>
@@ -2303,7 +2307,7 @@
     <string name="country_is">冰島</string>
     <string name="country_in">印度</string>
     <string name="country_id">印尼</string>
-    <string name="country_ir">伊朗伊斯蘭共和國</string>
+    <string name="country_ir">伊朗</string>
     <string name="country_iq">伊拉克</string>
     <string name="country_ie">愛爾蘭</string>
     <string name="country_im">曼島</string>
@@ -2320,7 +2324,7 @@
     <string name="country_kr">南韓</string>
     <string name="country_kw">科威特</string>
     <string name="country_kg">吉爾吉斯</string>
-    <string name="country_la">寮國人民民主共和國</string>
+    <string name="country_la">寮國</string>
     <string name="country_lv">拉脫維亞</string>
     <string name="country_lb">黎巴嫩</string>
     <string name="country_ls">賴索托</string>
@@ -2330,7 +2334,7 @@
     <string name="country_lt">立陶宛</string>
     <string name="country_lu">盧森堡</string>
     <string name="country_mo">澳門</string>
-    <string name="country_mk">馬其頓 (前南斯拉夫馬其頓共和國)</string>
+    <string name="country_mk">馬其頓</string>
     <string name="country_mg">馬達加斯加</string>
     <string name="country_mw">馬拉威</string>
     <string name="country_my">馬來西亞</string>
@@ -2338,17 +2342,17 @@
     <string name="country_ml">馬利</string>
     <string name="country_mt">馬爾他</string>
     <string name="country_mh">馬紹爾群島</string>
-    <string name="country_mq">法屬馬提尼克島</string>
+    <string name="country_mq">馬丁尼克</string>
     <string name="country_mr">茅利塔尼亞</string>
     <string name="country_mu">模里西斯</string>
-    <string name="country_yt">法屬馬約特島</string>
+    <string name="country_yt">馬約特島</string>
     <string name="country_mx">墨西哥</string>
-    <string name="country_fm">密克羅尼西亞聯邦</string>
-    <string name="country_md">摩爾多瓦共和國</string>
+    <string name="country_fm">密克羅尼西亞</string>
+    <string name="country_md">摩爾多瓦</string>
     <string name="country_mc">摩納哥</string>
     <string name="country_mn">蒙古</string>
     <string name="country_me">蒙特內哥羅</string>
-    <string name="country_ms">蒙塞拉島</string>
+    <string name="country_ms">蒙特色拉特島</string>
     <string name="country_ma">摩洛哥</string>
     <string name="country_mz">莫三比克</string>
     <string name="country_mm">緬甸</string>
@@ -2356,7 +2360,7 @@
     <string name="country_nr">諾魯</string>
     <string name="country_np">尼泊爾</string>
     <string name="country_nl">荷蘭</string>
-    <string name="country_an">荷屬安地列斯群島</string>
+    <string name="country_an">荷屬安替列斯</string>
     <string name="country_nc">新喀里多尼亞</string>
     <string name="country_nz">紐西蘭</string>
     <string name="country_ni">尼加拉瓜</string>
@@ -2364,7 +2368,7 @@
     <string name="country_ng">奈及利亞</string>
     <string name="country_nu">紐威島</string>
     <string name="country_nf">諾福克島</string>
-    <string name="country_mp">北馬利亞納群島</string>
+    <string name="country_mp">北馬里安納群島</string>
     <string name="country_no">挪威</string>
     <string name="country_om">阿曼</string>
     <string name="country_pk">巴基斯坦</string>
@@ -2375,7 +2379,7 @@
     <string name="country_py">巴拉圭</string>
     <string name="country_pe">秘魯</string>
     <string name="country_ph">菲律賓</string>
-    <string name="country_pn">皮特開恩群島</string>
+    <string name="country_pn">皮特康</string>
     <string name="country_pl">波蘭</string>
     <string name="country_pt">葡萄牙</string>
     <string name="country_pr">波多黎各</string>
@@ -2384,16 +2388,16 @@
     <string name="country_ru">俄羅斯聯邦</string>
     <string name="country_rw">盧安達</string>
     <string name="country_re">留尼旺</string>
-    <string name="country_bl">法屬聖巴泰勒米島</string>
+    <string name="country_bl">聖巴瑟米</string>
     <string name="country_sh">聖赫勒拿島</string>
     <string name="country_kn">聖克里斯多福及尼維斯</string>
     <string name="country_lc">聖露西亞</string>
-    <string name="country_mf">聖馬丁 (法屬區)</string>
-    <string name="country_pm">聖皮耶及密克隆群島</string>
+    <string name="country_mf">法屬聖馬丁</string>
+    <string name="country_pm">聖皮瑞及麥克隆</string>
     <string name="country_vc">聖文森及格瑞那丁</string>
     <string name="country_ws">薩摩亞</string>
     <string name="country_sm">聖馬利諾</string>
-    <string name="country_st">聖多美普林西比</string>
+    <string name="country_st">聖多美及普林西比</string>
     <string name="country_sa">沙烏地阿拉伯</string>
     <string name="country_sn">塞內加爾</string>
     <string name="country_rs">塞爾維亞</string>
@@ -2405,7 +2409,7 @@
     <string name="country_sb">索羅門群島</string>
     <string name="country_so">索馬利亞</string>
     <string name="country_za">南非</string>
-    <string name="country_gs">南喬治亞及南桑威奇群島</string>
+    <string name="country_gs">南喬治亞及南三明治群島</string>
     <string name="country_es">西班牙</string>
     <string name="country_lk">斯里蘭卡</string>
     <string name="country_sd">蘇丹</string>
@@ -2422,7 +2426,7 @@
     <string name="country_tl">東帝汶</string>
     <string name="country_tg">多哥</string>
     <string name="country_tk">托克勞群島</string>
-    <string name="country_to">東加王國</string>
+    <string name="country_to">東加</string>
     <string name="country_tt">千里達及托巴哥</string>
     <string name="country_tn">突尼西亞</string>
     <string name="country_tr">土耳其</string>
@@ -2434,7 +2438,7 @@
     <string name="country_ae">阿拉伯聯合大公國</string>
     <string name="country_gb">英國</string>
     <string name="country_us">美國</string>
-    <string name="country_um">美屬外島</string>
+    <string name="country_um">美屬外部小群島</string>
     <string name="country_uy">烏拉圭</string>
     <string name="country_uz">烏茲別克</string>
     <string name="country_vu">萬那杜</string>
@@ -2442,8 +2446,8 @@
     <string name="country_vn">越南</string>
     <string name="country_vg">英屬維京群島</string>
     <string name="country_vi">美屬維京群島</string>
-    <string name="country_wf">瓦利斯群島和富圖那群島</string>
-    <string name="country_eh">西薩哈拉地區</string>
+    <string name="country_wf">瓦利斯及福杜納群島</string>
+    <string name="country_eh">西撒哈拉</string>
     <string name="country_ye">葉門</string>
     <string name="country_zm">尚比亞</string>
     <string name="country_zw">辛巴威</string>
